force-app/main/default/objects/EmailMessage/fields/Email_Handle_time_Day__c.field-meta.xml
<CustomField>
    <fullName>Email_Handle_time_Day__c</fullName>
    <formula>CreatedDate - ReplyToEmailMessage.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Handle time (Day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>