force-app/main/default/objects/EmailMessage/fields/Email_Handle_time_Hour__c.field-meta.xml
<CustomField>
    <fullName>Email_Handle_time_Hour__c</fullName>
    <formula>(CreatedDate - ReplyToEmailMessage.CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Handle time (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>