force-app/main/default/objects/EmailMessage/fields/within_24_hrs__c.field-meta.xml
<CustomField>
    <fullName>within_24_hrs__c</fullName>
    <description>check that agent are response the email within 24 hrs</description>
    <formula>IF(AND(Email_Handle_time_Hour__c &lt;= 24),true,false)</formula>
    <label>Within 24 hrs</label>
    <type>Checkbox</type>
</CustomField>